# serializer version: 1
# name: test_sensor_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'model_id': None,
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 131s][entities]
  list([
  ])
# ---
# name: test_sensor_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'model_id': None,
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 200s][entities]
  list([
  ])
# ---
# name: test_sensor_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'model_id': None,
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 400s][entities]
  list([
  ])
# ---
# name: test_sensor_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'model_id': None,
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 600s][entities]
  list([
  ])
# ---
# name: test_sensor_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'model_id': None,
      'name': 'Dimmable Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Dimmable Light][entities]
  list([
  ])
# ---
# name: test_sensor_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'model_id': None,
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Dimmer Switch][entities]
  list([
  ])
# ---
# name: test_sensor_state[Humidifier 200s][binary_sensor.humidifier_200s_low_water]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Humidifier 200s Low water',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.humidifier_200s_low_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensor_state[Humidifier 200s][binary_sensor.humidifier_200s_water_tank_lifted]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Humidifier 200s Water tank lifted',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.humidifier_200s_water_tank_lifted',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensor_state[Humidifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '200s-humidifier4321',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Classic200S',
      'model_id': None,
      'name': 'Humidifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Humidifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.humidifier_200s_low_water',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Low water',
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'water_lacks',
      'unique_id': '200s-humidifier4321-water_lacks',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.humidifier_200s_water_tank_lifted',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Water tank lifted',
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'water_tank_lifted',
      'unique_id': '200s-humidifier4321-details.water_tank_lifted',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_sensor_state[Humidifier 600S][binary_sensor.humidifier_600s_low_water]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Humidifier 600S Low water',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.humidifier_600s_low_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensor_state[Humidifier 600S][binary_sensor.humidifier_600s_water_tank_lifted]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Humidifier 600S Water tank lifted',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.humidifier_600s_water_tank_lifted',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensor_state[Humidifier 600S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-humidifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LUH-A602S-WUS',
      'model_id': None,
      'name': 'Humidifier 600S',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Humidifier 600S][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.humidifier_600s_low_water',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Low water',
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'water_lacks',
      'unique_id': '600s-humidifier-water_lacks',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.humidifier_600s_water_tank_lifted',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
      'original_icon': None,
      'original_name': 'Water tank lifted',
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'water_tank_lifted',
      'unique_id': '600s-humidifier-details.water_tank_lifted',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_sensor_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'model_id': None,
      'name': 'Outlet',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Outlet][entities]
  list([
  ])
# ---
# name: test_sensor_state[SmartTowerFan][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'smarttowerfan',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LTF-F422S-KEU',
      'model_id': None,
      'name': 'SmartTowerFan',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[SmartTowerFan][entities]
  list([
  ])
# ---
# name: test_sensor_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'model_id': None,
      'name': 'Temperature Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Temperature Light][entities]
  list([
  ])
# ---
# name: test_sensor_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'model_id': None,
      'name': 'Wall Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Wall Switch][entities]
  list([
  ])
# ---
